--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-#Documentation de toutes les propriétés
-#https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
-server.port=8085
+#choisir le profil la configuration ï¿½ mï¿½ttre en place
+spring.profiles.active=dev
 
-#emplacement des logs
-storage.folder=c:/tempBidon
+#rÃ©cupÃ©rer JAVA_HOME de windows environnement
+java.home=${JAVA_HOME}
