--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,19 @@ springdoc.api-docs.path=/api-docs
 # limiter la taille des fichiers echangés entre back et front
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+#configuration de la source de données
+spring.datasource.url=jdbc:mariadb://localhost:3307/springapi
+spring.datasource.username=root
+spring.datasource.password=
+#param qui demande à spring data de générer la structure de la base
+spring.jpa.generate-ddl=true
+#initialisation des tables
+spring.sql.init.mode=always
+#afficher les commandes sql dans un env. dev
+spring.jpa.show-sql=true
+#choisir une stratégie de la génération de la structure: create-drop - create - validate - update (prod)
+spring.jpa.hibernate.ddl-auto=update
+
+
+
