--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
 			<artifactId>mariadb-java-client</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
