--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,6 +30,20 @@ spring.jpa.show-sql=true
 #choisir une stratégie de la génération de la structure: create-drop - create - validate - update (prod)
 spring.jpa.hibernate.ddl-auto=update
 
+#Configuration de connection pool
+# temps max d'attente d'un client pour obtenir une connexion
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.auto-commit=true
+#nombre min de connexions à maintenir actives
+spring.datasource.hikari.minimum-idle=10
+
+#actuator: management et monitoring
+#sever:port/actuator/metrics
+management.endpoints.web.exposure.include=*
+management.endpoints.metrics.enabled=true
+#management.endpoints.web.exposure.include=metrics
+
 
 
 
